--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
     <title>Days Since Last Drama on CivEx</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
     <script src="jquery.js"></script>
     <script src="index.js"></script>
 </head>
 <body>
-    <p>It's been</p>
-    <a id="days">probably only a few</a>
-    <p>days since the last drama on CivEx</p>
+    <div id="txt">
+        <p>It's been</p>
+        <a id="days">probably only a few</a>
+        <p>days since the last drama on CivEx</p>
+    </div>
 </body>
 </html>
