Made "days" change to "day" if the counter is at 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="txt">
         <p>It's been</p>
         <a id="days">probably only a few</a>
-        <p>days since the last drama on CivEx</p>
+        <p>day<span id="s"></span> since the last drama on CivEx</p>
     </div>
 </body>
 </html>
